--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   font-size: 30px;
+}
+
+div {
+  margin-top: 5px;
 }
 
 code {
@@ -20,4 +24,67 @@ li, select {
 
 table {
   text-align: center;
+  text-transform: capitalize;
+  border: 1px solid #ddd !important;
+  width: 80%;
+  max-width: 80%;
+  margin-bottom: 20px;
+}
+
+table th {
+  border: 1px solid #ddd !important;
+  text-transform: uppercase;
+  background-color: lightgray;
+}
+
+table td {
+  padding: 8px;
+  line-height: 1;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+
+.btn {
+  font-size: 20px;
+  margin: 5px;
+  padding: 5px 5px 3px;
+  min-width: 50px;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+
+}
+
+.btn-red, .hold {
+  background-color: lightpink;
+}
+
+.btn-white {
+  background-color: white;
+}
+
+.btn-yellow, .buy {
+  background-color: gold;
+}
+
+.btn-green, .sell {
+  background-color: lightgreen;
+}
+
+.btn-logo {
+  background: none;
+  cursor: pointer;
+  margin: 20px;
+  padding: 0;
+  border: 0;
+}
+
+.btn:hover {
+  opacity: 0.6;
+  background-color: silver;
+}
+
+select {
+  margin: 10px;
 }
